Header alignment fix

--- a/ShiptechV2/assets/theme/defaultweb/design-system/shiptech/modules/st-contract-nego.scss
+++ b/ShiptechV2/assets/theme/defaultweb/design-system/shiptech/modules/st-contract-nego.scss
@@ -4355,6 +4355,9 @@
         max-width: 100%;
         background: inherit;
         width: 100%;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
       }
 
       div {
